feat: add wasm target to toolchain

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,3 +2,4 @@
 channel = "stable"
 profile = "minimal"
 components = [ "rustfmt", "rust-analyzer", "clippy" ]
+targets = [ "wasm32-unknown-unknown" ]
