--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "stable"
+channel = "nightly"
 profile = "minimal"
 components = [ "rustfmt", "rust-analyzer", "clippy" ]
 targets = [ "wasm32-unknown-unknown" ]
